@@ -9,6 +9,7 @@ libxp (1:1.0.1-1) UNRELEASED; urgency=low
   * Update libxp6-dbg's section: libdevel → debug.
   * Use --fail-missing instead of --list-missing in dh_install for
     additional safety.
+  * Build in build/ instead of obj-$(DEB_BUILD_GNU_TYPE)/.
 
  -- Cyril Brulebois <kibi@debian.org>  Tue, 08 Mar 2011 00:11:40 +0100
 
